--- a/NadavBaruch-pset6/Base.lproj/Main.storyboard
+++ b/NadavBaruch-pset6/Base.lproj/Main.storyboard
@@ -35,13 +35,25 @@
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
+                                    <action selector="checkShabbat:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LI5-ma-SyP"/>
                                     <segue destination="TVv-28-zeT" kind="show" id="ULn-zW-IIx"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uiU-dN-HP0">
+                                <rect key="frame" x="0.0" y="432" width="375" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="J1U-m8-idH"/>
+                    <connections>
+                        <outlet property="cityInput" destination="uiU-dN-HP0" id="Mxh-kn-p1V"/>
+                        <outlet property="countryCodeInput" destination="O10-ut-6ug" id="CLg-56-i7c"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
