--- a/NadavBaruch-pset6/Base.lproj/Main.storyboard
+++ b/NadavBaruch-pset6/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                 </state>
                                 <connections>
                                     <action selector="checkShabbat:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LI5-ma-SyP"/>
-                                    <segue destination="TVv-28-zeT" kind="show" id="ULn-zW-IIx"/>
+                                    <segue destination="TVv-28-zeT" kind="show" identifier="SecondVCID" id="ULn-zW-IIx"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uiU-dN-HP0">
@@ -70,12 +70,24 @@
                     <view key="view" contentMode="scaleToFill" id="YkB-pW-Vd2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M3p-Xb-V0w">
+                                <rect key="frame" x="0.0" y="323" width="375" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="candleLighting" destination="M3p-Xb-V0w" id="yeK-cW-8FR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tJa-7a-f4a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1938" y="139"/>
+            <point key="canvasLocation" x="1936.8" y="138.98050974512745"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ZrZ-Qb-W6G">
